# ComputationalGeometry

./: .gitignore  CMakeLists.txt  a.out
P1/: a.out  output.txt  p1_lib.h  paul_strecken.cpp  strecken.cpp  testing.cpp
P1/Abgabe/: P1_Abgabe.aux  P1_Abgabe.blg  P1_Abgabe.fdb_latexmk  P1_Abgabe.fls  P1_Abgabe.run.xml  P1_Abgabe.tex
P1/Ausarbeitung/: P1_Abgabe.tex
P1/testing/: a.out  intersections.csv  plot_result.py  strecken.cpp
P2/: CMakeLists.txt  a.out  bundeslaender.txt  bundesland.cpp  koords.csv  koords_to_test.txt  p2_lib.h  plot_bundesland.py  staedte.txt
P2/Abgabe/: P2_Abgabe.aux  P2_Abgabe.bcf  P2_Abgabe.blg  P2_Abgabe.fdb_latexmk  P2_Abgabe.fls  P2_Abgabe.run.xml  P2_Abgabe.tex
P2/Ausarbeitung/: P2_Abgabe.tex
P3/: CMakeLists.txt  intersects_found.txt  intersects_found2.txt  line_sweep  line_sweep.cpp  output.txt  p3_lib.h  plot_lines.py  reduce_dat_files.cpp  s_1000_10_intersects.txt  s_1000_10_intersects_bruteforce.txt  s_1000_1_reduced_intersects.txt  strecken.cpp  test.cpp  test.txt  test_intersect.cpp  validate_result.py
P3/Abgabe/: P3_Abgabe.tex  line_sweep.cpp  p3_lib.h
P3/Ausarbeitung/: P3_Abgabe.tex
P3/line_sweep.dSYM/Contents/: Info.plist
P3/line_sweep.dSYM/Contents/Resources/DWARF/: line_sweep
P3/testing/: plot_result.py
P4/: P4_Abgabe.tex  create_plot.py  cube_data.txt  data.txt  output.txt  plot_runtimes.py  result.txt  square_data.txt
P4/Ausarbeitung/: P4_Abgabe.tex
P5/: P5.mlx  chooseVec.mlx
P5/Abgabe/: P5.mlx
P5/Ausarbeitung/: P5_Abgabe.tex
strecken/: s_1000_1.csv
